src/v7/CAPI_CapControls.pas

UNIT CAPI_CapControls;
{$inline on}

INTERFACE

USES CAPI_Utils;

PROCEDURE CapControls_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
function CapControls_Get_Capacitor():PAnsiChar;cdecl;
function CapControls_Get_CTratio():Double;cdecl;
function CapControls_Get_DeadTime():Double;cdecl;
function CapControls_Get_Delay():Double;cdecl;
function CapControls_Get_DelayOff():Double;cdecl;
function CapControls_Get_First():Integer;cdecl;
function CapControls_Get_Mode():Integer;cdecl;
function CapControls_Get_MonitoredObj():PAnsiChar;cdecl;
function CapControls_Get_MonitoredTerm():Integer;cdecl;
function CapControls_Get_Name():PAnsiChar;cdecl;
function CapControls_Get_Next():Integer;cdecl;
function CapControls_Get_OFFSetting():Double;cdecl;
function CapControls_Get_ONSetting():Double;cdecl;
function CapControls_Get_PTratio():Double;cdecl;
function CapControls_Get_UseVoltOverride():WordBool;cdecl;
function CapControls_Get_Vmax():Double;cdecl;
function CapControls_Get_Vmin():Double;cdecl;
procedure CapControls_Set_Capacitor(const Value: PAnsiChar);cdecl;
procedure CapControls_Set_CTratio(Value: Double);cdecl;
procedure CapControls_Set_DeadTime(Value: Double);cdecl;
procedure CapControls_Set_Delay(Value: Double);cdecl;
procedure CapControls_Set_DelayOff(Value: Double);cdecl;
procedure CapControls_Set_Mode(Value: Integer);cdecl;
procedure CapControls_Set_MonitoredObj(const Value: PAnsiChar);cdecl;
procedure CapControls_Set_MonitoredTerm(Value: Integer);cdecl;
procedure CapControls_Set_Name(const Value: PAnsiChar);cdecl;
procedure CapControls_Set_OFFSetting(Value: Double);cdecl;
procedure CapControls_Set_ONSetting(Value: Double);cdecl;
procedure CapControls_Set_PTratio(Value: Double);cdecl;
procedure CapControls_Set_UseVoltOverride(Value: WordBool);cdecl;
procedure CapControls_Set_Vmax(Value: Double);cdecl;
procedure CapControls_Set_Vmin(Value: Double);cdecl;
function CapControls_Get_Count():Integer;cdecl;
procedure CapControls_Reset();cdecl;

IMPLEMENTATION

USES CAPI_Constants, DSSGlobals, Executive, ControlElem, CapControl, CapControlVars, SysUtils, PointerList;

function ActiveCapControl: TCapControlObj;
begin
  Result := nil;
  if ActiveCircuit <> Nil then Result := ActiveCircuit.CapControls.Active;
end;
//------------------------------------------------------------------------------
procedure Set_Parameter(const parm: string; const val: string);
var
  cmd: string;
begin
  if not Assigned (ActiveCircuit) then exit;
  SolutionAbort := FALSE;  // Reset for commands entered from outside
  cmd := Format ('capcontrol.%s.%s=%s', [ActiveCapControl.Name, parm, val]);
  DSSExecutive.Command := cmd;
end;
//------------------------------------------------------------------------------
PROCEDURE CapControls_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
VAR
  Result: PPAnsiCharArray;
  elem: TCapControlObj;
  lst: TPointerList;
  k: Integer;
Begin
  Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
  Result[0] := DSS_CopyStringAsPChar('NONE');
  IF ActiveCircuit <> Nil THEN WITH ActiveCircuit DO
  If CapControls.ListSize > 0 Then
  Begin
    lst := CapControls;
    DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (lst.ListSize-1) + 1);
    k:=0;
    elem := lst.First;
    WHILE elem<>Nil DO Begin
      Result[k] := DSS_CopyStringAsPChar(elem.Name);
      Inc(k);
      elem := lst.Next;
    End;
  End;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Capacitor_AnsiString():AnsiString;inline;
var
  elem: TCapControlObj;
begin
  Result := '';
  elem := ActiveCapControl;
  if elem <> nil then Result := elem.This_Capacitor.Name;
end;

function CapControls_Get_Capacitor():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(CapControls_Get_Capacitor_AnsiString());
end;
//------------------------------------------------------------------------------
function CapControls_Get_CTratio():Double;cdecl;
var
  elem: TCapControlObj;
begin
  Result := 0.0;
  elem := ActiveCapControl;
  if elem <> nil then Result := elem.CTRatioVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_DeadTime():Double;cdecl;
var
  elem: TCapControlObj;
begin
  Result := 0.0;
  elem := ActiveCapControl;
  if elem <> nil then Result := elem.DeadTimeVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Delay():Double;cdecl;
var
  elem: TCapControlObj;
begin
  Result := 0.0;
  elem := ActiveCapControl;
  if elem <> nil then Result := elem.OnDelayVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_DelayOff():Double;cdecl;
var
  elem: TCapControlObj;
begin
  Result := 0.0;
  elem := ActiveCapControl;
  if elem <> nil then Result := elem.OffDelayVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_First():Integer;cdecl;
Var
  elem: TCapControlObj;
  lst: TPointerList;
Begin
  Result := 0;
  If ActiveCircuit <> Nil Then begin
    lst := ActiveCircuit.CapControls;
    elem := lst.First;
    If elem <> Nil Then Begin
      Repeat
        If elem.Enabled Then Begin
          ActiveCircuit.ActiveCktElement := elem;
          Result := 1;
        End
        Else elem := lst.Next;
      Until (Result = 1) or (elem = nil);
    End;
  End;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Mode():Integer;cdecl;
var
  elem: TCapControlObj;
begin
  Result := dssCapControlVoltage;
  elem := ActiveCapControl;
  if elem <> nil then begin
    case elem.CapControlType of
      CURRENTCONTROL: Result := dssCapControlCurrent;
      VOLTAGECONTROL: Result := dssCapControlVoltage;
      KVARCONTROL: Result := dssCapControlKvar;
      TIMECONTROL: Result := dssCapControlTime;
      PFCONTROL: Result := dssCapControlPF;
      USERCONTROL: Result := dssCapControlPF;
    end;
  end;
end;
//------------------------------------------------------------------------------
function CapControls_Get_MonitoredObj_AnsiString():AnsiString;inline;
var
  elem: TCapControlObj;
begin
  Result := '';
  elem := ActiveCapControl;
  if elem <> nil then Result := elem.ElementName;
end;

function CapControls_Get_MonitoredObj():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(CapControls_Get_MonitoredObj_AnsiString());
end;
//------------------------------------------------------------------------------
function CapControls_Get_MonitoredTerm():Integer;cdecl;
var
  elem: TCapControlObj;
begin
  Result := 0;
  elem := ActiveCapControl;
  if elem <> nil then Result := elem.ElementTerminal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Name_AnsiString():AnsiString;inline;
var
  elem: TCapControlObj;
begin
  Result := '';
  elem := ActiveCapControl;
  if elem <> nil then Result := elem.Name;
end;
